Styled the index file ~ David

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 
 <body>
 
-<h1>Bellatrix</h1>
-<p>Testing</p>
+<div class="block">
+	<h1>Bellatrix</h1>
+	<p>Testing</p>
+</div>
 
 </body>
 </html>
